<resources>
    <string name="app_name">Interactive CookBook</string>
    <string name="Main_Dishes">Main Dishes</string>
    <string name="search_title">Search</string>
    <string name="Drinks">Drinks</string>
    <string name="Desserts">Desserts</string>
    <string name="Kids">Kids Menu</string>
    <string name="prep">Prep Time</string>
    <string name="cook">Cook Time</string>
    <string name="total">Total Time</string>
    <string name="ingredient">Ingredient\'s</string>
    <string name="Missing">Missing Resource</string>
    <string name="Porkchops">Honey Garlic Pork Chops</string>
    <string name="burger">Classic Burger</string>
    <string name="tikka">Chicken Tikka Masala</string>
    <string name="Ginger_Beef">Crispy Ginger Beef</string>
    <string name="twiceBaked">Twice Baked Potatoes</string>
    <string name="Meatballs">Sweet and Sour Meatballs</string>
    <string name="directions">Directions</string>
    <string name="enjoy">Bon appetite!</string>
    <string name="servings">Servings</string>


    <!-- Ingredients and measurements -->
    <string name="half"><![CDATA[1/2]]></string>
    <string name="quarter"><![CDATA[1/4]]></string>
    <string name="three_quarter">3/4</string>
    <string name="third">1/3</string>
    <string name="twoThird">2/3</string>
    <string name="teaspoon">teaspoon</string>
    <string name="cup">Cup</string>
    <string name="Tablespoon">Tablespoon</string>
    <string name="ketchup">Ketchup</string>
    <string name="honey">Honey</string>
    <string name="soy">Low Sodium Soy Sauce</string>
    <string name="garlic">Garlic</string>
    <string name="clove">Cloves</string>
    <string name="mince">Minced</string>
    <string name="pork">Pork Chops</string>
    <string name="leanBeef">Lean Ground Beef</string>
    <string name="seasoning">Seasoning Salt</string>
    <string name="slice">Cheese Slices</string>
    <string name="garlicPowder">Garlic Powder</string>
    <string name="Worcestershire">Worcestershire Sauce</string>
    <string name="pepper">Ground Black Peper</string>
    <string name="crush">Crushed</string>
    <string name="pound">Pounds</string>
    <string name="hamburgerBun">Hamberger Buns</string>
    <string name="yogurt">Yogurt</string>
    <string name="lemon">Lemon Juice</string>
    <string name="cumin">Ground Cumin</string>
    <string name="cinnamon">Ground Cinnamon</string>
    <string name="cayenne">Cayenne Pepper</string>
    <string name="ginger">Minced Ginger</string>
    <string name="salt">Salt</string>
    <string name="boneless">Boneless</string>
    <string name="chicken">Chicken</string>
    <string name="skewers">Long Skewers</string>
    <string name="butter">Butter</string>
    <string name="jalapeno">Jalapeno</string>
    <string name="can">Can</string>
    <string name="paprika">Paprika</string>
    <string name="tomatosauce">Tomato Sauce</string>
    <string name="cream">Heavy Cream</string>
    <string name="cilantro">Cilantro</string>
    <string name="chop">Choppped</string>
    <string name="potatoe">Potatoes</string>
    <string name="bacon">Bacon</string>
    <string name="onion">Onion</string>
    <string name="mushroom">Mushrooms</string>
    <string name="redPepper">Red Pepper</string>
    <string name="chives">Chives</string>
    <string name="ounceContainer"> 8 Ounce Container</string>
    <string name="sourCream">Sour Cream</string>
    <string name="shreddedCheddar">Shredded Cheddar</string>
    <string name="dryBread">Dry Bead Crumbs</string>


    <!--Number-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!--Directions-->
    <string name="tikkaDirections1">1) Start by Cutting the boneless chickens into bite size pieces</string>
    <string name="tikkaDirections2">2) Combine Yogurt, lemon juice 2tsp of cumin, the cinnamon, cayenne black pepper ginger and the salt. Mix Well and stir in chicken.</string>
    <string name="tikkaDirections3">3) Refrigerate for one hour</string>
    <string name="tikkaDirections4">4) Preheat the grill with High Heat</string>
    <string name="tikkaDirections5">5) Lightly Oil the Grill grates</string>
    <string name="tikkaDirections6">6) Thread the Chicken onto skewers and discard the Marinade</string>
    <string name="tikkaDirections7">7) Grill until juices run clear, about 5 mins. per side</string>
    <string name="tikkaDirections8">8) Melt the butter in a large heavy skillet over medium heat.</string>
    <string name="tikkaDirections9">9) Saute garlic and jalapeno for 1 min</string>
    <string name="tikkaDirections10">10) Season with the rest of the cumin, paprika, and 1tsp of salt.</string>
    <string name="tikkaDirections11">11) Stir in tomato sauce and Heavy Creame</string>
    <string name="tikkaDirections12">12) Simmer on low heat till sauce thickens approx. 20 minutes.</string>
    <string name="tikkaDirections13">13) Add Grilled Chicken and simmer for 10 minutes.</string>
    <string name="tikkaDirections14">14) Transfer to a serving Platter and garnish with fresh Cilantro</string>


</resources>
