<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Baked_Card">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#DCDCDC"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/IMG_Baked"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/recipeNameBaked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="#BE8CFF"
                android:text="@string/app_name"
                android:layout_toEndOf="@+id/IMG_Baked"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/midnight1"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/prep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prep"
                android:textSize="16sp"
                android:fontFamily="@font/midnight1"
                android:layout_below="@id/recipeNameBaked"
                android:layout_toEndOf="@id/IMG_Baked"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"/>
            <TextView
                android:id="@+id/cook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cook"
                android:textSize="16sp"
                android:fontFamily="@font/midnight1"
                android:layout_below="@id/recipeNameBaked"
                android:layout_toEndOf="@id/prep"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="16sp"
                android:fontFamily="@font/midnight1"
                android:layout_toEndOf="@id/cook"
                android:layout_below="@id/recipeNameBaked"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/BakedPrepTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/midnight1"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="28dp"
                android:layout_below="@id/prep"
                android:layout_toEndOf="@id/IMG_Baked"/>

            <TextView
                android:id="@+id/BakedCookTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/midnight1"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="38dp"
                android:layout_below="@id/prep"
                android:layout_toEndOf="@id/BakedPrepTime"/>
            <TextView
                android:id="@+id/BakedTotalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/midnight1"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="38dp"
                android:layout_below="@id/prep"
                android:layout_toEndOf="@id/BakedCookTime"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>