<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@drawable/parchment"
    tools:context=".PorkChops_Activity">



    <ImageView
        android:id="@+id/Image"
        android:contentDescription="@string/Main_Dishes"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="0dp"
        android:layout_weight="40"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_margin="20dp"
        android:background="?android:attr/listDivider"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:textAlignment="center"
        android:textSize="25sp"
        android:fontFamily="@font/midnight1"
        android:text="@string/Porkchops"
        android:textColor="@color/colorAccent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_margin="20dp"
        android:background="?android:attr/listDivider"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ingredientHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient"
            android:fontFamily="@font/midnight1"
            android:layout_marginStart="8dp"
            android:textSize="20sp"/>
        <View
            android:id="@+id/ingredientHeaderLine"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp"
            android:layout_alignEnd="@id/ingredientHeader"
            android:layout_below="@id/ingredientHeader"
            android:background="?android:attr/listDivider"/>

        <TextView
            android:id="@+id/ingredient1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingredientHeaderLine"
            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/midnight1"
            android:text=""/>
        <TextView
            android:id="@+id/ingredient2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingredient1"
            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/midnight1"
            android:text=""/>
        <TextView
            android:id="@+id/ingredient3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingredient2"
            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/midnight1"
            android:text=""/>
        <TextView
            android:id="@+id/ingredient4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingredient3"
            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/midnight1"
            android:text=""/>
        <TextView
            android:id="@+id/ingredient5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingredient4"
            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/midnight1"
            android:text=""/>
    </RelativeLayout>
</LinearLayout>